--- a/Frontend-Hospital/register.html
+++ b/Frontend-Hospital/register.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hospital Queue System - Login</title>
+    <title>Hospital Queue System - Register</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <style>
-        /* Global styles */
         body {
             display: flex;
             justify-content: center;
@@ -18,24 +17,21 @@
             font-family: 'Poppins', sans-serif;
         }
 
-        /* Login container */
-        .login-container {
+        .register-container {
             background: white;
             padding: 30px;
             border-radius: 12px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-            width: 380px;
+            width: 400px;
             text-align: center;
             animation: fadeIn 0.8s ease-in-out;
         }
 
-        /* Hospital Logo */
         .logo {
             width: 80px;
             margin-bottom: 10px;
         }
 
-        /* Heading */
         h3 {
             font-weight: bold;
             color: #007bff;
@@ -43,7 +39,6 @@
             margin-bottom: 20px;
         }
 
-        /* Form styling */
         .form-group {
             position: relative;
             margin-bottom: 15px;
@@ -62,7 +57,6 @@
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.3);
         }
 
-        /* Icons inside inputs */
         .input-icon {
             position: absolute;
             left: 12px;
@@ -71,7 +65,6 @@
             color: #007bff;
         }
 
-        /* Buttons */
         .btn-primary {
             background-color: #007bff;
             border: none;
@@ -86,8 +79,7 @@
             background-color: #0056b3;
         }
 
-        /* Register button */
-        #registerButton {
+        #loginButton {
             background: none;
             border: none;
             color: #007bff;
@@ -98,17 +90,15 @@
             margin-top: 15px;
         }
 
-        #registerButton:hover {
+        #loginButton:hover {
             text-decoration: underline;
         }
 
-        /* Loading spinner */
         .loading-spinner {
             display: none;
             margin-top: 15px;
         }
 
-        /* Fade-in animation */
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(-20px); }
             to { opacity: 1; transform: translateY(0); }
@@ -116,90 +106,86 @@
     </style>
 </head>
 <body>
-<div class="login-container">
+<div class="register-container">
     <img src="images/gallery/health_care.png" alt="Hospital Logo" class="logo">
     <h3>HealthCare Hospitals</h3>
-    <form id="loginForm">
+    <form id="registerForm">
         <div class="form-group">
             <span class="input-icon"><i class="fas fa-user"></i></span>
+            <input type="text" class="form-control" id="name" placeholder="Full Name" required>
+        </div>
+        <div class="form-group">
+            <span class="input-icon"><i class="fas fa-envelope"></i></span>
             <input type="email" class="form-control" id="email" placeholder="Email" required>
         </div>
         <div class="form-group">
             <span class="input-icon"><i class="fas fa-lock"></i></span>
             <input type="password" class="form-control" id="password" placeholder="Password" required>
         </div>
-        <button type="submit" class="btn btn-primary" id="loginButton">Login</button>
-        <button id="registerButton">Register Now</button>
+        <div class="form-group">
+            <span class="input-icon"><i class="fas fa-lock"></i></span>
+            <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm Password" required>
+        </div>
+        <button type="submit" class="btn btn-primary" id="registerButton">Register</button>
+        <button id="loginButton">Already have an account? Login</button>
         <div class="loading-spinner">
             <span class="spinner-border text-primary" role="status"></span>
         </div>
     </form>
 </div>
 
-<!-- FontAwesome for icons -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
 
 <script>
-    document.getElementById("loginButton").addEventListener("click", function (event) {
+    document.getElementById("registerButton").addEventListener("click", function (event) {
         event.preventDefault();
 
+        let name = document.getElementById("name").value.trim();
         let email = document.getElementById("email").value.trim();
         let password = document.getElementById("password").value.trim();
+        let confirmPassword = document.getElementById("confirmPassword").value.trim();
 
-        if (!email || !password) {
-            alert("Please enter both email and password.");
+        if (!name || !email || !password || !confirmPassword) {
+            alert("Please fill in all fields.");
             return;
         }
 
-        let user = { email, password };
+        if (password !== confirmPassword) {
+            alert("Passwords do not match.");
+            return;
+        }
 
-        // Show loading spinner
+        let user = { name, email, password };
+
         $(".loading-spinner").show();
 
-        fetch("http://localhost:8080/api/v1/auth/authenticate", {
+        fetch("http://localhost:8080/api/v1/auth/register", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify(user)
         })
             .then(response => response.json())
             .then(response => {
-                $(".loading-spinner").hide(); // Hide spinner
-
-                if (response.code === 201 && response.data.token) {
-                    localStorage.setItem("authToken", response.data.token);
-
-                    fetch("http://localhost:8080/api/v1/admin/checkRole", {
-                        method: "GET",
-                        headers: { "Authorization": `Bearer ${response.data.token}` }
-                    })
-                        .then(response => response.json())
-                        .then(roleData => {
-                            if (roleData.role === "ADMIN") {
-                                window.location.href = "admin_dashboard.html";
-                            } else if (roleData.role === "USER") {
-                                window.location.href = "user_dashboard.html";
-                            } else {
-                                alert("User role not recognized.");
-                            }
-                        })
-                        .catch(error => {
-                            console.error("Error fetching role:", error);
-                            alert("Failed to determine user role.");
-                        });
+                $(".loading-spinner").hide();
+                if (response.code === 201) {
+                    alert("Registration successful! You can now log in.");
+                    window.location.href = "login.html";
                 } else {
-                    alert(response.message || "Login failed.");
+                    alert(response.message || "Registration failed.");
                 }
             })
             .catch(error => {
                 $(".loading-spinner").hide();
-                console.error("Login error:", error);
-                alert("Login failed. Please try again.");
+                console.error("Registration error:", error);
+                alert("Registration failed. Please try again.");
             });
     });
-    document.getElementById("registerButton").addEventListener("click", function(event) {
+
+    document.getElementById("loginButton").addEventListener("click", function(event) {
         event.preventDefault();
-        window.location.href = "register.html";
+        window.location.href = "index.html";
     });
+
 </script>
 </body>
 </html>
