--- a/Frontend-Hospital/admin_dashboard.html
+++ b/Frontend-Hospital/admin_dashboard.html
@@ -2,9 +2,117 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+<div class="d-flex flex-column min-vh-100">
+    <div class="d-flex flex-grow-1">
+        <nav class="bg-dark text-white p-3 vh-100" style="width: 250px;">
+            <div class="text-center mb-3">
+                <img src="images/gallery/health_care.png" alt="Hospital Logo" width="100">
+            </div>
+            <h2 class="text-center">Admin Panel</h2>
+            <ul class="nav flex-column">
+                <li class="nav-item"><a class="nav-link text-white" href="#">Dashboard</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="user.html">Users</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="appointment.html">Appointments</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="doctor.html">Doctors</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="department.html">Departments</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="report.html">Reports</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="settings.html">Settings</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="logout.html">Logout</a></li>
+            </ul>
+        </nav>
+        <div class="container-fluid p-4">
+            <header class="d-flex justify-content-between align-items-center mb-4">
+                <h1>Dashboard</h1>
+                <button class="btn btn-primary" id="menu-toggle">☰</button>
+            </header>
+            <div class="row g-3">
+                <div class="col-md-4">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h3 class="card-title">Total Users</h3>
+                            <p class="fs-4">120</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h3 class="card-title">Appointments</h3>
+                            <p class="fs-4">45</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h3 class="card-title">Doctors</h3>
+                            <p class="fs-4">30</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-md-6">
+                    <canvas id="appointmentsChart"></canvas>
+                </div>
+                <div class="col-md-6">
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Patient Name</th>
+                            <th>Doctor</th>
+                            <th>Date</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>John Doe</td>
+                            <td>Dr. Smith</td>
+                            <td>2025-03-21</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Jane Doe</td>
+                            <td>Dr. Johnson</td>
+                            <td>2025-03-22</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="bg-dark text-white text-center py-3 mt-auto">
+        <p>&copy; 2025 Hospital Management System. All Rights Reserved.</p>
+    </footer>
+</div>
+<script>
+    const ctx = document.getElementById('appointmentsChart').getContext('2d');
+    new Chart(ctx, {
+        type: 'bar',
+        data: {
+            labels: ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday'],
+            datasets: [{
+                label: 'Appointments',
+                data: [10, 15, 8, 12, 18],
+                backgroundColor: 'rgba(54, 162, 235, 0.6)'
+            }]
+        },
+        options: {
+            responsive: true
+        }
+    });
+</script>
 </body>
 </html>
