--- a/Frontend-Hospital/doctor.html
+++ b/Frontend-Hospital/doctor.html
@@ -6,6 +6,8 @@
     <title>Doctors Management System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <style>
         body {
             background-color: #f8f9fa;
@@ -30,23 +32,25 @@
     </style>
 </head>
 <body class="py-5">
+<div class="d-flex flex-column min-vh-100">
+    <div class="d-flex flex-grow-1">
+        <nav class="bg-dark text-white p-3 vh-100" style="width: 250px;">
+            <div class="text-center mb-3">
+                <img src="images/gallery/health_care.png" alt="Hospital Logo" width="100">
+            </div>
+            <h2 class="text-center">Admin Panel</h2>
+            <ul class="nav flex-column">
+                <li class="nav-item"><a class="nav-link text-white" href="admin_dashboard.html">Dashboard</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="user.html">Users</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="appointment.html">Appointments</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="doctor.html">Doctors</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="department.html">Departments</a></li>
 
-<!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="container">
-        <a class="navbar-brand" href="#">Asiri Hospitals</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="doctor.html">Doctors Management</a></li>
-                <li class="nav-item"><a class="nav-link" href="departments.html">Departments Management</a></li>
-                <li class="nav-item"><a class="nav-link" href="appointments.html">Appointments Management</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="report.html">Reports</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="settings.html">Settings</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="logout.html">Logout</a></li>
             </ul>
-        </div>
-    </div>
-</nav>
+        </nav>
 
 <div class="container">
     <div class="row justify-content-center">
@@ -60,8 +64,8 @@
                         <input type="text" class="form-control" id="doctor_id" required>
                     </div>
                     <div class="col-md-6">
-                        <label for="user_id" class="form-label">User ID</label>
-                        <input type="text" class="form-control" id="user_id" required>
+                        <label for="uid" class="form-label">User ID</label>
+                        <input type="text" class="form-control" id="uid" required>
                     </div>
                     <div class="col-md-6">
                         <label for="doctor_name" class="form-label">Full Name</label>
@@ -79,13 +83,20 @@
                         <label for="available_to" class="form-label">Available To</label>
                         <input type="text" class="form-control" id="available_to" required>
                     </div>
+                    <div class="col-md-6">
+                        <label for="channeling_pay" class="form-label">Channeling Pay</label>
+                        <input type="text" class="form-control" id="channeling_pay" required>
+                    </div>
                     <div class="col-12 d-flex gap-2 justify-content-end">
-                        <button type="button" class="btn btn-secondary" onclick="clearForm()">
-                            <i class="bi bi-x-circle"></i> Clear
-                        </button>
-                        <button type="submit" class="btn btn-primary">
-                            <i class="bi bi-save"></i> Save Doctor
-                        </button>
+
+                        <!-- Buttons -->
+                        <div class="mb-3">
+                            <button type="button" class="btn btn-secondary" onclick="clearForm()"><i class="bi bi-x-circle"></i> Clear</button>
+                            <button type="button" class="btn btn-success" onclick="saveDoctor()">Save</button>
+                            <button type="button" class="btn btn-primary" onclick="updateDoctor()">Update</button>
+                            <button type="button" class="btn btn-danger" onclick="deleteDoctor()">Delete</button>
+                        </div>
+
                     </div>
                 </form>
             </div>
@@ -94,15 +105,16 @@
             <div class="table-container">
                 <h3 class="mb-4">Doctors List</h3>
                 <div class="table-responsive">
-                    <table class="table table-hover">
+                    <table class="table table-bordered table-hover mt-3">
                         <thead class="table-light">
                         <tr>
                             <th>Doc ID</th>
-                            <th>User ID</th>
+                            <th>Channeling Pay</th>
+                             <th>Available From</th>
+                            <th>Available To</th>
                             <th>Name</th>
                             <th>Specialization</th>
-                            <th>Available From</th>
-                            <th>Available To</th>
+                            <th>User ID</th>
                             <th>Actions</th>
                         </tr>
                         </thead>
@@ -115,81 +127,146 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="/js/jquery-3.7.1.min.js"></script>
+<script src="js/jquery-3.7.1.min.js"></script>
+<script src="js/jquery.js"></script>
 <script>
-
-    $(document).ready(function () {
-        fetchDoctorData();
-
-        $('#doctorForm').on('submit', function (e) {
-            e.preventDefault();
-            saveDoctor();
-        });
+    document.addEventListener("DOMContentLoaded", function () {
+        loadDoctors();
     });
 
-    function fetchDoctorData() {
-        $.ajax({
-            url: "http://localhost:8080/api/v1/doctor/getAll",
-            method: "GET",
-            success: function (response) {
-                $("#doctorTable").empty();
-                response.data.forEach(data => {
-                    $("#doctorTable").append(`
-                    <tr>
-                        <td>${data.id}</td>
-                        <td>${data.userId}</td>
-                        <td>${data.doctorName}</td>
-                        <td>${data.specialization}</td>
-                        <td>${data.availableFrom}</td>
-                        <td>${data.availableTo}</td>
-                        <td>
-                            <button class="btn btn-sm btn-outline-primary" onclick="editDoctor(${data.id})">
-                                <i class="bi bi-pencil"></i>
-                            </button>
-                            <button class="btn btn-sm btn-outline-danger" onclick="removeDoctor(${data.id})">
-                                <i class="bi bi-trash"></i>
-                            </button>
-                        </td>
-                    </tr>
-                `);
-                });
-            },
-            error: function () {
-                alert("Error loading data!");
-            }
-        });
-    }
-
     function saveDoctor() {
-        const doctorData = {
-            id: $('#doctor_id').val(),
-            userId: $('#user_id').val(),
-            doctorName: $('#doctor_name').val(),
-            specialization: $('#specialization').val(),
-            availableFrom: $('#available_from').val(),
-            availableTo: $('#available_to').val()
+        const authToken = localStorage.getItem('authToken')
+        let doctor = {
+            id: $("#doctor_id").val(),
+            channeling_pay:$("#channeling_pay").val(),
+            available_from:$("#available_from").val(),
+            available_to:$("#available_to").val(),
+            name: $("#doctor_name").val(),
+            specialization:$("#specialization").val(),
+            uid: $("#uid").val()
+
+
         };
 
         $.ajax({
             url: "http://localhost:8080/api/v1/doctor/save",
-            method: "POST",
+            type: "POST",
             contentType: "application/json",
-            data: JSON.stringify(doctorData),
-            success: function () {
-                alert("Doctor Saved!");
-                fetchDoctorData();
-                $('#doctorForm')[0].reset();
-            },
-            error: function () {
-                alert("Error saving doctor!");
+            headers: {"Authorization": `Bearer ${authToken}`},  // Add space after Bearer
+            data: JSON.stringify(doctor),
+            success: function(response) {
+                alert(response);
+                loadDoctors();
+                clearForm();
             }
         });
     }
 
-    function clearForm() {
-        $('#doctorForm')[0].reset();
+    function loadDoctors() {
+        const authToken = localStorage.getItem('authToken')
+        $.ajax({
+            url: "http://localhost:8080/api/v1/doctor/getAll",
+            type: "GET",
+            headers: { "Authorization": `Bearer ${authToken}` },
+            success: function(doctors) {
+                $("#doctorTable").empty();
+                if(doctors.data){
+                    doctors.data.forEach(doctor => {
+                        $("#doctorTable").append(`
+                        <tr>
+                            <td>${doctor.id}</td>
+                             <td>${doctor.channeling_pay}</td>
+                            <td>${doctor.available_from}</td>
+                            <td>${doctor.available_to}</td>
+                             <td>${doctor.name}</td>
+                             <td>${doctor.specialization}</td>
+                            <td>${doctor.uid}</td>
+                            <td>
+                                <button class="btn btn-warning btn-sm" onclick="editDoctor('${doctor.id}','${doctor.channeling_pay}', '${doctor.available_from}', '${doctor.available_to}', '${doctor.name}','${doctor.specialization}','${doctor.uid}')">Edit</button>
+                                <button class="btn btn-danger btn-sm" onclick="deleteDoctor('${doctor.id}')">Delete</button>
+                            </td>
+                        </tr>
+                    `);
+                    });
+                }
+
+            }
+        });
     }
+
+    function editDoctor(id,channeling_pay, available_from,available_to,name,specialization, Uid,) {
+        $("#doctor_id").val(id);
+        $("#channeling_pay").val(channeling_pay);
+        $("#available_from").val(available_from);
+        $("#available_to").val(available_to);
+        $("#doctor_name").val(name);
+        $("#specialization").val(specialization);
+        $("#uid").val(uid);
+
+    }
+
+    function updateDoctor() {
+        const authToken = localStorage.getItem('authToken')
+        let updateDoctor = {
+            id: $("#doctor_id").val(),
+            channeling_pay: $("#channeling_pay").val(),
+            available_from: $("#available_from").val(),
+            available_to: $("#available_to").val(),
+            name: $("#doctor_name").val(),
+            specialization: $("#specialization").val(),
+            uid: $("#uid").val(),
+
+
+        };
+
+        $.ajax({
+            url: "http://localhost:8080/api/v1/doctor/update",
+            type: "PUT",
+            contentType: "application/json",
+            headers: { "Authorization": `Bearer ${authToken}` },
+            data: JSON.stringify(updateDoctor),
+            success: function(response) {
+                alert("Doctor updated successfully!");
+                loadDoctors();
+                clearForm();
+            },
+            error: function(xhr) {
+                alert("Error updating doctor: " + xhr.responseText);
+            }
+        });
+    }
+
+    function deleteDoctor(doctor_id) {
+        const authToken = localStorage.getItem('authToken')
+        if (confirm(`Are you sure you want to delete doctor ID: ${doctor_id}?`)) {
+            $.ajax({
+                url: `http://localhost:8080/api/v1/doctor/delete/${doctor_id}`,
+                type: "DELETE",
+                headers: { "Authorization": `Bearer ${authToken}` },
+                success: function () {
+                    alert("doctor deleted successfully!");
+                    loadDoctors();
+                },
+                error: function (xhr) {
+                    alert("Error deleting doctor: " + xhr.responseText);
+                }
+            });
+        }
+    }
+
+    function clearForm() {
+        $("#doctor_id").val("");
+        $("#channeling_pay").val("");
+        $("#available_from").val("");
+        $("#available_to").val("");
+        $("#doctor_name").val("");
+        $("#specialization").val("");
+        $("#uid").val("");
+
+    }
+
+
+
 
 </script>
 </body>
