--- a/Frontend-Hospital/register.html
+++ b/Frontend-Hospital/register.html
@@ -107,85 +107,79 @@
 </head>
 <body>
 <div class="register-container">
-    <img src="images/gallery/health_care.png" alt="Hospital Logo" class="logo">
-    <h3>HealthCare Hospitals</h3>
+    <h3 class="text-center">Register</h3>
     <form id="registerForm">
-        <div class="form-group">
-            <span class="input-icon"><i class="fas fa-user"></i></span>
-            <input type="text" class="form-control" id="name" placeholder="Full Name" required>
+        <div class="mb-3">
+            <label for="name" class="form-label">Name</label>
+            <input type="text" class="form-control" id="name" required>
         </div>
-        <div class="form-group">
-            <span class="input-icon"><i class="fas fa-envelope"></i></span>
-            <input type="email" class="form-control" id="email" placeholder="Email" required>
+        <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" required>
         </div>
-        <div class="form-group">
-            <span class="input-icon"><i class="fas fa-lock"></i></span>
-            <input type="password" class="form-control" id="password" placeholder="Password" required>
+        <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password" required>
         </div>
-        <div class="form-group">
-            <span class="input-icon"><i class="fas fa-lock"></i></span>
-            <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm Password" required>
+        <div class="mb-3">
+            <label for="role" class="form-label">Role</label>
+            <select class="form-control" id="role" required>
+                <option value="ADMIN">ADMIN</option>
+                <option value="USER">USER</option>
+            </select>
         </div>
-        <button type="submit" class="btn btn-primary" id="registerButton">Register</button>
-        <button id="loginButton">Already have an account? Login</button>
-        <div class="loading-spinner">
-            <span class="spinner-border text-primary" role="status"></span>
-        </div>
+        <button type="submit" class="btn btn-primary w-50">Register</button>
+        <button id="loginButton">Back to login</button>
     </form>
 </div>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
 
+
 <script>
-    document.getElementById("registerButton").addEventListener("click", function (event) {
+    document.getElementById("registerForm").addEventListener("submit", function (event) {
         event.preventDefault();
 
-        let name = document.getElementById("name").value.trim();
-        let email = document.getElementById("email").value.trim();
-        let password = document.getElementById("password").value.trim();
-        let confirmPassword = document.getElementById("confirmPassword").value.trim();
+        const name = document.getElementById("name").value;
+        const email = document.getElementById("email").value;
+        const password = document.getElementById("password").value;
+        const role = document.getElementById("role").value;
 
-        if (!name || !email || !password || !confirmPassword) {
-            alert("Please fill in all fields.");
+        if (!name || !email || !password || !role) {
+            alert("Please fill all the fields.");
             return;
         }
 
-        if (password !== confirmPassword) {
-            alert("Passwords do not match.");
-            return;
-        }
 
-        let user = { name, email, password };
+        const user = { name, email, password, role };
 
-        $(".loading-spinner").show();
 
-        fetch("http://localhost:8080/api/v1/auth/register", {
+        fetch("http://localhost:8080/api/v1/user/register", {
             method: "POST",
-            headers: { "Content-Type": "application/json" },
+            headers: {
+                "Content-Type": "application/json"
+            },
             body: JSON.stringify(user)
         })
             .then(response => response.json())
-            .then(response => {
-                $(".loading-spinner").hide();
-                if (response.code === 201) {
-                    alert("Registration successful! You can now log in.");
-                    window.location.href = "login.html";
+            .then(data => {
+                if (data.code === 201) {
+                    alert("Registration successful!");
+                    window.location.href = "index.html";
                 } else {
-                    alert(response.message || "Registration failed.");
+                    alert(data.message);
                 }
             })
             .catch(error => {
-                $(".loading-spinner").hide();
-                console.error("Registration error:", error);
+                console.error("Error during registration:", error);
                 alert("Registration failed. Please try again.");
             });
     });
 
-    document.getElementById("loginButton").addEventListener("click", function(event) {
-        event.preventDefault();
+    document.getElementById("loginButton").addEventListener("click", function() {
         window.location.href = "index.html";
     });
-
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
