--- a/Frontend-Hospital/department.html
+++ b/Frontend-Hospital/department.html
@@ -101,7 +101,7 @@
         </div>
     </div>
 </div>
-
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="js/jquery-3.7.1.min.js"></script>
 <script src="js/jquery.js"></script>
@@ -111,27 +111,59 @@
     });
 
     function saveDepartment() {
-        const authToken = localStorage.getItem('authToken')
+        const authToken = localStorage.getItem('authToken');
+        console.log("Auth Token:", authToken); // Debugging
+
+        if (!authToken) {
+            alert("Authorization token is missing! Please log in again.");
+            return;
+        }
+
         let department = {
             id: $("#id").val(),
-            name:$("#name").val(),
-
-
+            name: $("#name").val()
         };
 
         $.ajax({
             url: "http://localhost:8080/api/v1/department/save",
             type: "POST",
             contentType: "application/json",
-            headers: {"Authorization": `Bearer ${authToken}`},  // Add space after Bearer
+            headers: { "Authorization": `Bearer ${authToken}` },
             data: JSON.stringify(department),
             success: function(response) {
                 alert(response);
                 loadDepartments();
                 clearForm();
+            },
+            error: function(xhr) {
+                alert("Error saving department: " + xhr.responseText);
             }
         });
     }
+
+
+    // function saveDepartment() {
+    //     const authToken = localStorage.getItem('authToken')
+    //     let department = {
+    //         id: $("#id").val(),
+    //         name:$("#name").val(),
+    //
+    //
+    //     };
+    //
+    //     $.ajax({
+    //         url: "http://localhost:8080/api/v1/department/save",
+    //         type: "POST",
+    //         contentType: "application/json",
+    //         headers: {"Authorization": `Bearer ${authToken}`},  // Add space after Bearer
+    //         data: JSON.stringify(department),
+    //         success: function(response) {
+    //             alert(response);
+    //             loadDepartments();
+    //             clearForm();
+    //         }
+    //     });
+    // }
 
     function loadDepartments() {
         const authToken = localStorage.getItem('authToken')
@@ -199,10 +231,10 @@
             $.ajax({
                 url: `http://localhost:8080/api/v1/department/delete/${id}`,
                 type: "DELETE",
-                headers: { "Authorization": `Bearer ${authToken}` },
+                headers: { "Authorization": `Bearer ${localStorage.getItem('authToken')}` },
                 success: function () {
-                    alert("department deleted successfully!");
-                    loadDoctors();
+                    alert("Department deleted successfully!");
+                    loadDepartments(); // ✅ FIXED (previously loadDoctors())
                 },
                 error: function (xhr) {
                     alert("Error deleting department: " + xhr.responseText);
@@ -219,5 +251,5 @@
     }
 
 </script>
-</body>
+ </body>
 </html>
