--- a/Frontend-Hospital/adminHTML/admin_dashboard.html
+++ b/Frontend-Hospital/adminHTML/admin_dashboard.html
@@ -12,7 +12,7 @@
 
     <style>
         :root {
-            --primary-color: #007bff;
+            --primary-color: #0f1f34;
             --secondary-color: #6c757d;
             --success-color: #28a745;
             --warning-color: #ffc107;
