--- a/Frontend-Hospital/adminHTML/admin_dashboard.html
+++ b/Frontend-Hospital/adminHTML/admin_dashboard.html
@@ -9,23 +9,31 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- SweetAlert2 CSS & JS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <style>
         :root {
-            --primary-color: #0f1f34;
-            --secondary-color: #6c757d;
+            --primary-color: #813271;
+            --primary-dark: #6a2a5d;
+            --secondary-color: #4e73df;
             --success-color: #28a745;
+            --danger-color: #dc3545;
             --warning-color: #ffc107;
-            --bg-light: #f8f9fa;
+            --info-color: #17a2b8;
+            --light-color: #f8f9fa;
+            --dark-color: #343a40;
         }
 
         body {
             font-family: 'Inter', sans-serif;
-            background-color: var(--bg-light);
+            background-color: var(--light-color);
         }
 
         .sidebar {
-            background: linear-gradient(to bottom, var(--primary-color), #0056b3);
+            background: linear-gradient(to bottom, var(--primary-color), var(--primary-dark));
             color: white;
             height: 100vh;
             position: fixed;
@@ -34,36 +42,42 @@
             width: 250px;
             transition: transform 0.3s ease;
             z-index: 1000;
+            box-shadow: 2px 0 10px rgba(0,0,0,0.1);
         }
 
         .sidebar-logo {
-            max-width: 120px;
+            max-width: 140px;
             margin: 20px auto;
             display: block;
+            padding: 10px;
+            background: rgba(255,255,255,0.1);
+            border-radius: 8px;
         }
 
         .nav-link {
-            color: rgba(255,255,255,0.7);
+            color: rgba(255,255,255,0.8);
             transition: all 0.3s ease;
             display: flex;
             align-items: center;
-            padding: 10px 15px;
-            border-radius: 5px;
+            padding: 12px 20px;
+            border-radius: 6px;
+            margin: 5px 10px;
         }
 
         .nav-link:hover, .nav-link.active {
-            background-color: rgba(255,255,255,0.1);
+            background-color: rgba(255,255,255,0.15);
             color: white;
+            transform: translateX(5px);
         }
 
         .nav-link i {
-            margin-right: 10px;
-            font-size: 1.1rem;
+            margin-right: 12px;
+            font-size: 1.2rem;
         }
 
         .main-content {
             margin-left: 250px;
-            padding: 20px;
+            padding: 25px;
             transition: margin-left 0.3s ease;
         }
 
@@ -71,11 +85,9 @@
             .sidebar {
                 transform: translateX(-100%);
             }
-
             .main-content {
                 margin-left: 0;
             }
-
             .sidebar.show {
                 transform: translateX(0);
             }
@@ -84,45 +96,153 @@
         .dashboard-card {
             border: none;
             border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
             transition: transform 0.3s ease;
+            background-color: white;
         }
 
         .dashboard-card:hover {
             transform: translateY(-5px);
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.12);
         }
 
         .dashboard-card .card-body {
             display: flex;
             justify-content: space-between;
             align-items: center;
+            padding: 20px;
         }
 
         .dashboard-card .card-icon {
-            font-size: 3rem;
-            opacity: 0.7;
+            font-size: 2.5rem;
+            opacity: 0.8;
         }
 
         .chart-container {
             background: white;
             border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
             padding: 20px;
+            border: 1px solid rgba(0,0,0,0.05);
         }
 
         .recent-appointments {
             background: white;
             border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
             padding: 20px;
+            border: 1px solid rgba(0,0,0,0.05);
         }
 
         footer {
-            background: linear-gradient(to right, var(--primary-color), #0056b3);
+            background: linear-gradient(to right, var(--primary-color), var(--primary-dark));
+            color: white;
+            padding: 15px 0;
+            margin-top: 30px;
+        }
+
+        /* Custom scrollbar */
+        ::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        ::-webkit-scrollbar-track {
+            background: #f1f1f1;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: var(--primary-color);
+            border-radius: 4px;
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background: var(--primary-dark);
+        }
+
+        /* Loading spinner */
+        .spinner-container {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(0,0,0,0.5);
+            z-index: 9999;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .spinner {
+            width: 50px;
+            height: 50px;
+            border: 5px solid #f3f3f3;
+            border-top: 5px solid var(--primary-color);
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* Custom alerts */
+        .swal2-popup {
+            font-family: 'Inter', sans-serif;
+            border-radius: 10px;
+        }
+
+        .swal2-title {
+            font-weight: 700;
+        }
+
+        .swal2-confirm {
+            background-color: var(--primary-color) !important;
+        }
+
+        .swal2-cancel {
+            background-color: #6c757d !important;
+        }
+
+        h1, h2, h3, h4 {
+            color: var(--primary-dark);
+            font-weight: bold;
+        }
+
+        .table {
+            background-color: white;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+            border-radius: 8px;
+            overflow: hidden;
+        }
+
+        .table thead {
+            background-color: var(--secondary-color);
+            color: white;
+        }
+
+        .table th {
+            font-weight: 600;
+            padding: 15px;
+        }
+
+        .table td {
+            padding: 12px 15px;
+            vertical-align: middle;
+        }
+
+        .table-hover tbody tr:hover {
+            background-color: rgba(78, 115, 223, 0.05);
         }
     </style>
 </head>
 <body>
+<!-- Loading Spinner -->
+<div class="spinner-container" id="loadingSpinner">
+    <div class="spinner"></div>
+</div>
+
 <!-- Sidebar -->
 <div class="sidebar" id="sidebar">
     <img src="../images/gallery/health_care.png" alt="Hospital Logo" class="sidebar-logo">
@@ -155,7 +275,7 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="patient.html">
-                <i class="bi bi-box-arrow-right"></i> Patient
+                <i class="bi bi-heart-pulse"></i> Patients
             </a>
         </li>
         <li class="nav-item">
@@ -173,15 +293,14 @@
                 <i class="bi bi-box-arrow-right"></i> Logout
             </a>
         </li>
-
     </ul>
 </div>
 
 <!-- Main Content -->
 <div class="main-content">
     <header class="d-flex justify-content-between align-items-center mb-4">
-        <h1 class="m-0">Dashboard</h1>
-        <button class="btn btn-outline-primary d-md-none" id="menu-toggle">
+        <h1>Dashboard</h1>
+        <button class="btn btn-outline-light d-md-none" id="menu-toggle">
             <i class="bi bi-list"></i>
         </button>
     </header>
@@ -189,35 +308,35 @@
     <!-- Quick Stats -->
     <div class="row g-4 mb-4">
         <div class="col-md-4">
-            <div class="card dashboard-card text-primary">
+            <div class="card dashboard-card">
                 <div class="card-body">
                     <div>
                         <h3 class="card-title">Total Users</h3>
-                        <p class="fs-4 fw-bold">120</p>
+                        <p class="fs-4 fw-bold" id="totalUsers">0</p>
                     </div>
-                    <i class="bi bi-people card-icon"></i>
+                    <i class="bi bi-people card-icon" style="color: var(--primary-color);"></i>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
-            <div class="card dashboard-card text-success">
+            <div class="card dashboard-card">
                 <div class="card-body">
                     <div>
                         <h3 class="card-title">Appointments</h3>
-                        <p class="fs-4 fw-bold">45</p>
+                        <p class="fs-4 fw-bold" id="totalAppointments">0</p>
                     </div>
-                    <i class="bi bi-calendar-check card-icon"></i>
+                    <i class="bi bi-calendar-check card-icon" style="color: var(--success-color);"></i>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
-            <div class="card dashboard-card text-warning">
+            <div class="card dashboard-card">
                 <div class="card-body">
                     <div>
                         <h3 class="card-title">Doctors</h3>
-                        <p class="fs-4 fw-bold">30</p>
+                        <p class="fs-4 fw-bold" id="totalDoctors">0</p>
                     </div>
-                    <i class="bi bi-person-badge card-icon"></i>
+                    <i class="bi bi-person-badge card-icon" style="color: var(--warning-color);"></i>
                 </div>
             </div>
         </div>
@@ -241,24 +360,11 @@
                             <th>Patient</th>
                             <th>Doctor</th>
                             <th>Date</th>
+                            <th>Status</th>
                         </tr>
                         </thead>
-                        <tbody>
-                        <tr>
-                            <td>John Doe</td>
-                            <td>Dr. Smith</td>
-                            <td>2025-03-21</td>
-                        </tr>
-                        <tr>
-                            <td>Jane Doe</td>
-                            <td>Dr. Johnson</td>
-                            <td>2025-03-22</td>
-                        </tr>
-                        <tr>
-                            <td>Alice Smith</td>
-                            <td>Dr. Williams</td>
-                            <td>2025-03-23</td>
-                        </tr>
+                        <tbody id="recentAppointmentsTable">
+                        <!-- Will be populated dynamically -->
                         </tbody>
                     </table>
                 </div>
@@ -268,38 +374,173 @@
 </div>
 
 <!-- Footer -->
-<footer class="text-white text-center py-3 mt-4">
-    <p class="m-0">&copy; 2025 Hospital Management System. All Rights Reserved.</p>
+<footer class="text-center py-3">
+    <p class="m-0">&copy; <span id="currentYear"></span> Hospital Management System. All Rights Reserved.</p>
 </footer>
 
 <script>
+    // Set current year in footer
+    document.getElementById('currentYear').textContent = new Date().getFullYear();
+
     // Menu Toggle for Mobile
     document.getElementById('menu-toggle').addEventListener('click', function() {
         document.getElementById('sidebar').classList.toggle('show');
     });
 
-    // Appointments Chart
-    const ctx = document.getElementById('appointmentsChart').getContext('2d');
-    new Chart(ctx, {
-        type: 'bar',
-        data: {
-            labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
-            datasets: [{
-                label: 'Appointments',
-                data: [10, 15, 8, 12, 18, 5, 7],
-                backgroundColor: 'rgba(54, 162, 235, 0.6)',
-                borderColor: 'rgba(54, 162, 235, 1)',
-                borderWidth: 1
-            }]
-        },
-        options: {
-            responsive: true,
-            scales: {
-                y: {
-                    beginAtZero: true
+    // Show loading spinner
+    function showLoading() {
+        document.getElementById('loadingSpinner').style.display = 'flex';
+    }
+
+    // Hide loading spinner
+    function hideLoading() {
+        document.getElementById('loadingSpinner').style.display = 'none';
+    }
+
+    // Custom alert functions using SweetAlert2
+    function showSuccessAlert(message) {
+        Swal.fire({
+            title: 'Success!',
+            text: message,
+            icon: 'success',
+            confirmButtonColor: '#813271',
+            timer: 2500,
+            timerProgressBar: true
+        });
+    }
+
+    function showErrorAlert(message) {
+        Swal.fire({
+            title: 'Error!',
+            text: message,
+            icon: 'error',
+            confirmButtonColor: '#813271'
+        });
+    }
+
+    // Load dashboard data
+    function loadDashboardData() {
+        const authToken = localStorage.getItem('authToken');
+        if (!authToken) {
+            showErrorAlert("Please login first");
+            window.location.href = "login.html";
+            return;
+        }
+
+        showLoading();
+
+        // Load statistics
+        $.ajax({
+            url: "http://localhost:8080/api/v1/dashboard/stats",
+            type: "GET",
+            headers: {"Authorization": `Bearer ${authToken}`},
+            success: function(response) {
+                if (response.data) {
+                    $("#totalUsers").text(response.data.totalUsers || 0);
+                    $("#totalAppointments").text(response.data.totalAppointments || 0);
+                    $("#totalDoctors").text(response.data.totalDoctors || 0);
+                }
+                hideLoading();
+            },
+            error: function(xhr) {
+                console.error("Error loading dashboard stats:", xhr);
+                hideLoading();
+            }
+        });
+
+        // Load weekly appointments data
+        $.ajax({
+            url: "http://localhost:8080/api/v1/dashboard/weekly-appointments",
+            type: "GET",
+            headers: {"Authorization": `Bearer ${authToken}`},
+            success: function(response) {
+                if (response.data) {
+                    renderWeeklyAppointmentsChart(response.data);
+                }
+            },
+            error: function(xhr) {
+                console.error("Error loading weekly appointments:", xhr);
+            }
+        });
+
+        // Load recent appointments
+        $.ajax({
+            url: "http://localhost:8080/api/v1/dashboard/recent-appointments",
+            type: "GET",
+            headers: {"Authorization": `Bearer ${authToken}`},
+            success: function(response) {
+                if (response.data && Array.isArray(response.data)) {
+                    renderRecentAppointments(response.data);
+                }
+            },
+            error: function(xhr) {
+                console.error("Error loading recent appointments:", xhr);
+            }
+        });
+    }
+
+    // Render weekly appointments chart
+    function renderWeeklyAppointmentsChart(data) {
+        const ctx = document.getElementById('appointmentsChart').getContext('2d');
+        new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: data.labels || ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
+                datasets: [{
+                    label: 'Appointments',
+                    data: data.values || [10, 15, 8, 12, 18, 5, 7],
+                    backgroundColor: 'rgba(129, 50, 113, 0.6)',
+                    borderColor: 'rgba(129, 50, 113, 1)',
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                responsive: true,
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
                 }
             }
+        });
+    }
+
+    // Render recent appointments table
+    function renderRecentAppointments(appointments) {
+        const tableBody = document.getElementById('recentAppointmentsTable');
+        tableBody.innerHTML = '';
+
+        if (appointments.length === 0) {
+            tableBody.innerHTML = '<tr><td colspan="4" class="text-center">No recent appointments</td></tr>';
+            return;
         }
+
+        appointments.forEach(appointment => {
+            const row = document.createElement('tr');
+
+            // Status badge
+            let statusBadgeClass = '';
+            switch(appointment.status) {
+                case 'PENDING': statusBadgeClass = 'badge bg-secondary'; break;
+                case 'CONFIRMED': statusBadgeClass = 'badge bg-success'; break;
+                case 'COMPLETED': statusBadgeClass = 'badge bg-primary'; break;
+                case 'CANCELLED': statusBadgeClass = 'badge bg-danger'; break;
+                case 'NO_SHOW': statusBadgeClass = 'badge bg-warning text-dark'; break;
+            }
+
+            row.innerHTML = `
+                <td>${appointment.patientName || 'N/A'}</td>
+                <td>${appointment.doctorName || 'N/A'}</td>
+                <td>${appointment.appointmentDate || 'N/A'}</td>
+                <td><span class="${statusBadgeClass}">${appointment.status || 'N/A'}</span></td>
+            `;
+            tableBody.appendChild(row);
+        });
+    }
+
+    // Initialize dashboard when page loads
+    document.addEventListener("DOMContentLoaded", function() {
+        loadDashboardData();
     });
 </script>
 </body>
