--- a/Frontend-Hospital/index.html
+++ b/Frontend-Hospital/index.html
@@ -39,6 +39,18 @@
             border-radius: 15px;
             overflow: hidden;
             background: white;
+            animation: fadeInUp 0.8s ease-in-out;
+        }
+
+        @keyframes fadeInUp {
+            from {
+                transform: translateY(50px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
         }
 
         .login-image {
@@ -133,6 +145,10 @@
             margin-top: 15px;
         }
 
+        .remember-me {
+            margin-top: 10px;
+        }
+
         @media (max-width: 768px) {
             .login-wrapper {
                 flex-direction: column;
@@ -160,9 +176,17 @@
             <div class="input-group mb-3">
                 <span class="input-group-text"><i class="fas fa-lock"></i></span>
                 <input type="password" class="form-control" id="password" placeholder="Password" required>
+                <span class="input-group-text" id="togglePassword" style="cursor: pointer;"><i class="fas fa-eye"></i></span>
             </div>
+
+            <!-- Remember Me Checkbox -->
+            <div class="remember-me">
+                <input type="checkbox" id="rememberMe"> <label for="rememberMe">Remember Me</label>
+            </div>
+
             <button type="submit" class="btn btn-login w-100" id="loginButton">Login</button>
             <a href="userHTML/register.html" class="btn btn-register w-100" id="registerButton">Register Now</a>
+            <a href="userHTML/register.html" class="btn btn-register w-100" id="forgotPasswordButton">Forgot Password?</a>
             <div class="loading-spinner">
                 <span class="spinner-border text-primary" role="status"></span>
             </div>
@@ -174,19 +198,33 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
 
 <script>
-    // Previous JavaScript remains the same
+    // Toggle password visibility
+    document.getElementById("togglePassword").addEventListener("click", function () {
+        const passwordInput = document.getElementById("password");
+        const icon = this.querySelector("i");
+        if (passwordInput.type === "password") {
+            passwordInput.type = "text";
+            icon.classList.replace("fa-eye", "fa-eye-slash");
+        } else {
+            passwordInput.type = "password";
+            icon.classList.replace("fa-eye-slash", "fa-eye");
+        }
+    });
+
+    // Handle login form submission
     document.getElementById("loginButton").addEventListener("click", function (event) {
         event.preventDefault();
 
         let email = document.getElementById("email").value.trim();
         let password = document.getElementById("password").value.trim();
+        let rememberMe = document.getElementById("rememberMe").checked;
 
         if (!email || !password) {
             alert("Please enter both email and password.");
             return;
         }
 
-        let user = { email, password };
+        let user = { email, password, rememberMe };
 
         // Show loading spinner
         $(".loading-spinner").show();
